:bug: fix Sous chrome 61 les numéros de TP ne sont plus visible

--- a/reveal/theme-zenika/theme.css
+++ b/reveal/theme-zenika/theme.css
@@ -263,7 +263,7 @@ body {
 
 }
 .reveal section [class^="page-tp"]:after {
-  display: inline-block;
+  display: block;
   color: #af1e3a;
   font-size: 50px;
   font-weight: bold;
